--- a/desafios/d010/style/style.css
+++ b/desafios/d010/style/style.css
@@ -63,7 +63,7 @@ nav {
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.5);
 }
 
-nav > a {
+nav>a {
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -72,7 +72,7 @@ nav > a {
     transition-duration: .5s;
 }
 
-nav > a:hover {
+nav>a:hover {
     background-color: var(--cor3);
     color: var(--cor5);
 }
@@ -94,9 +94,38 @@ main h1 {
     font-family: var(--fonte-android);
 }
 
-main h2 {
-    color: var(--cor5);
+main h2 {    
     font-family: var(--fonte-android);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent);
+    text-indent: 8px;
+}
+
+main p {
+    margin: 15px 0px;
+    text-align: justify;
+    text-indent: 30px;
+    font-size: 1em;
+    line-height: 2em;
+}
+
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
+}
+
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+}
+
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor4);
 }
 
 main img {
@@ -104,7 +133,7 @@ main img {
 }
 
 main img.pequena {
-    width: 50%;
+    max-width: 350px;
     display: block;
     margin: auto;
 }
